# Magister

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Server-Agent-App/: CMakeLists.txt
Server-Agent-App/src/: main.cpp
Server-App/: CMakeLists.txt
Server-App/include/: DatabaseManager.hpp  WebServer.hpp
Server-App/src/: DatabaseManager.cpp  WebServer.cpp  main.cpp
Shared-App/: CMakeLists.txt
Shared-App/include/: Config.hpp  CryptoHelper.hpp  JsonSerializer.hpp  Logger.hpp  Shared.hpp  SignatureManager.hpp  shared.hpp
Shared-App/src/: CryptoHelper.cpp  JsonSerializer.cpp  Logger.cpp  Shared.cpp  SignatureManager.cpp  shared.cpp
